Set basic framework dimensions

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+  <link href='./styles/game.css' type='text/css' rel='stylesheet'></link>
   <meta charset="utf-8">
   <title>Game Time</title>
-</head>
-<body>
   
+</head>
+
+<body>
+  <div id="scoreboard">
+    <!-- scoring -->
+  </div>
+  <canvas id="game" width="1000" height="500">
+    <hr>
+  </canvas>
+
+
+
   <script src="main.bundle.js"></script>
 </body>
+
 </html>
