--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 
 <body>
   <div id="scoreboard">
+    <p class="score"></p>
+    <p class="lives"></p>
   </div>
   <canvas id="game" width="1000" height="500">
   </canvas>
+  <script
+  src="http://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
   <script src="main.bundle.js"></script>
 </body>
 
