--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p class="score"></p>
     <p class="lives"></p>
   </div>
+  <div id="instructions">
+    <p id="scoreboard">Instructions here
+    <button class="start-game-button">Start Game</button></p>
+  </div>
   <canvas id="game" width="1000" height="500">
   </canvas>
   <script
