Add 30 second timer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Game Time</title>
 </head>
 
-<body>
+<body class="container">
   <div id="scoreboard">
     <p class="score"></p>
     <p class="lives"></p>
